<resources>
    <string name="app_name">Fixed Gear Calculator</string>
    <string name="pick_chainring">Chainring</string>
    <string name="pick_cog">Cog</string>
    <string name="meters">Meters</string>
    <string name="inches">Inches</string>
    <string name="wheel_size">Wheel size</string>
    <string name="calculator">Calculator</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_gear">Favorite Gear</string>

    <string name="select_gears">Select Gears:</string>
    <string name="select_speed_range">Select Speed Range in:</string>
    <string name="cadence">Cadence</string>
    <string name="you_don_t_have_any_favorites_yet">You don\'t have any favorites yet</string>
    <string name="metric">Metric (km/h)</string>
    <string name="imperial">Imperial (mi/h)</string>
    <string name="speed">Speed</string>
    <string name="m_line">m</string>
    <string name="in_line">in</string>

</resources>
