<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.roberto.fixiecalc.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <me.roberto.EditableSeekBar
                app:esbTitle="@string/pick_chainring"
                app:esbMax="55"
                app:esbMin="44"
                app:esbValue="44"
                android:id="@+id/ring_bar"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="80dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="0.088" />

            <me.roberto.EditableSeekBar
                app:esbTitle="@string/pick_cog"
                app:esbMax="19"
                app:esbMin="11"
                app:esbValue="11"
                android:id="@+id/cog_bar"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@id/ring_bar"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" />



            <TextView
                android:text="@string/wheel_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cog_bar"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/wheelText"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp" />

            <Spinner


                android:entries="@array/wheel_values"
                android:id="@+id/wheel_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wheelText"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" />



        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.134">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/metricRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />

            <RadioButton
                android:id="@+id/imperialRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/metricRadio"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/rollout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                tools:text="7.25"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/unitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="m"
                app:layout_constraintStart_toEndOf="@+id/rollout"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/rollout"
                android:layout_marginBottom="8dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
